<resources>
    <string name="app_name">Calendar</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>
    <string name="title_shop">Shop</string>
    <string name="title_createCard">Create a Card</string>
    <string name="title_editCard">Edit a Card</string>
    <string name="time_01">1:00</string>
    <string name="time_02">2:00</string>
    <string name="time_03">3:00</string>
    <string name="time_04">4:00</string>
    <string name="time_05">5:00</string>
    <string name="time_06">6:00</string>
    <string name="time_07">7:00</string>
    <string name="time_08">8:00</string>
    <string name="time_09">9:00</string>
    <string name="time_10">10:00</string>
    <string name="time_11">11:00</string>
    <string name="time_12">12:00</string>
</resources>