<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.calendar.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_createCard"
            app:destination="@id/navigation_createCard" />
        <action
            android:id="@+id/action_navigation_home_to_modifyFragment2"
            app:destination="@id/navigation_modifyFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_createCard"
        android:name="com.example.calendar.ui.create_card.CreateCardFragment"
        android:label="@string/title_createCard"
        tools:layout="@layout/fragment_createcard">

        <action
            android:id="@+id/action_navigation_createCard_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.calendar.ui.calendar_ui.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.calendar.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_setting" >
        <action
            android:id="@+id/action_navigation_settings_to_customizationFragment"
            app:destination="@id/navigation_customization" />
        <action
            android:id="@+id/action_navigation_settings_to_helpFragment"
            app:destination="@id/navigation_help" />
        <action
            android:id="@+id/action_navigation_settings_to_notificationFragment"
            app:destination="@id/navigation_display" />
        <action
            android:id="@+id/action_navigation_settings_to_displayFragment"
            app:destination="@id/navigation_display" />
        <action
            android:id="@+id/action_navigation_settings_to_notificationFragment2"
            app:destination="@id/navigation_notification" />
    </fragment>
    <fragment
        android:id="@+id/navigation_modifyFragment"
        android:name="com.example.calendar.ui.modify_card.ModifyFragment"
        android:label="@string/title_editCard"
        tools:layout="@layout/fragment_modify">
        <action
            android:id="@+id/action_modifyFragment_to_navigation_home3"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.example.calendar.ui.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop" />
    <fragment
        android:id="@+id/navigation_customization"
        android:name="com.example.calendar.ui.settings.CustomizationFragment"
        android:label="Customization">
        <action
            android:id="@+id/action_customizationFragment_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>
    <fragment
        android:id="@+id/navigation_help"
        android:name="com.example.calendar.ui.settings.HelpFragment"
        android:label="Help">
        <action
            android:id="@+id/action_helpFragment_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>
    <fragment
        android:id="@+id/navigation_display"
        android:name="com.example.calendar.ui.settings.DisplayFragment"
        android:label="Display">
        <action
            android:id="@+id/action_displayFragment2_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>
    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.example.calendar.ui.settings.NotificationFragment"
        android:label="Notification">
        <action
            android:id="@+id/action_notificationFragment_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>


</navigation>